# euro-meets-neurips-2022

./: .gitmodules  LICENSE  README.md  requirements.txt
evaluation/: SampleGenerator.py  environment.py  master_test.sh  master_validation.sh  run_solve_bound.sh  solve_bound.py  tools.py
evaluation/baselines/strategies/: __init__.py  _strategies.py
evaluation/src/: config.py  read_in_learning_iteration.txt  util.py  visualization.py
experiments/samples-100_instances-15_runtime-3600/ORTEC-VRPTW-ASYM-08d8e660-d1-n460-k42_100n_8is_1ss_3600tl/: best-sol.json  hindsight_problem.json  observation_0.json  observation_1.json  observation_2.json  observation_3.json  observation_4.json  observation_5.json  static_solution.json
experiments/samples-100_instances-15_runtime-3600/ORTEC-VRPTW-ASYM-13db18b2-d1-n310-k20_100n_16is_1ss_3600tl/: best-sol.json  hindsight_problem.json  observation_0.json  observation_1.json  observation_2.json  observation_3.json  observation_4.json  observation_5.json  observation_6.json  observation_7.json  static_solution.json
experiments/samples-100_instances-15_runtime-3600/ORTEC-VRPTW-ASYM-1a452a2c-d1-n391-k23_100n_4is_1ss_3600tl/: best-sol.json  (+8 more)
features/: FeatureComputer.py
pchgs/: .gitmodules  CMakeLists.txt  README.md
pchgs/include/: CircleSector.h  Genetic.h  Individual.h  LocalSearch.h  Matrix.h  Params.h  Population.h  commandline.h  log.hpp  xorshift128.h
pchgs/lib/: CMakeLists.txt
pchgs/src/: Genetic.cpp  Individual.cpp  LocalSearch.cpp  Params.cpp  Population.cpp  log.cpp  main.cpp
training/: master_experiments.sh  optimization.py  prediction.py  run_training.py  run_training.sh  visualize_learning.py
training/src/: config.py  util.py
(+1348 files in other folders)
